Fix GTS icon sometimes black on dark mode

--- a/src/stylesheets/Footer.css
+++ b/src/stylesheets/Footer.css
@@ -50,11 +50,6 @@
 
 /* Buttons on footer */
 
-[data-darkreader-scheme="dark"] .gts-svg /* Dark mode */
-{
-    filter: invert(1) hue-rotate(180deg); /* Make icon white */
-}
-
 .music-button
 {
     padding: 0px !important;
